@@ -81,10 +81,11 @@ UINT __cdecl heartbeat_thread(LPVOID pParam)
 
         ////////////////////////////////////////////////////////////////////////////////////////////
         // Set Title of window
+		CString *messageTitle = new CString();
         if (!global.ppro_is_connected)
         {
             GetWindowText(global.attached_hwnd, title, 512);
-            theApp.m_pMainWnd->SetWindowText(global.formula_name + " - " + global.trans.map.sitename + "(" + title + ")");
+			messageTitle->Format("%s - %s (%s)", global.formula_name, global.trans.map.sitename, title);
         }
         else
         {
@@ -96,9 +97,9 @@ UINT __cdecl heartbeat_thread(LPVOID pParam)
 
             else
                 _snprintf_s(title, _countof(title), _TRUNCATE, "%s - %s", ppro.data.m_site_name, ppro.data.m_tinf.m_name);
-
-            theApp.m_pMainWnd->SetWindowText(global.formula_name + " - " + global.trans.map.sitename +  "(" + title + ")");
+			messageTitle->Format("%s - %s (%s)", global.formula_name, global.trans.map.sitename, title);
         }
+		theApp.m_pMainWnd->PostMessage(WMA_SETWINDOWTEXT, 0, (LPARAM)messageTitle);
 
 
         ////////////////////////////////////////////////////////////////////////////////////////////
